--- a/Íjász adatbázis kezelő/Íjász adatbázis kezelő.csproj
+++ b/Íjász adatbázis kezelő/Íjász adatbázis kezelő.csproj
@@ -34,6 +34,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>C:\Users\László\Dropbox\Ijász program\0.8.1\Íjász\bin\x86\Debug\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
